<resources>
    <string name="app_name">AWS</string>

    //Get Started Page
    <string name="title_get_started">ADVANCED WORLD SOLUTIONS INC.</string>
    <string name="description_get_started">With its extensive years of software development practice coupled with highly efficient and well-rounded teams of engineers, AWS creates cutting-edge business solutions designed to attain your business objectives for exponential success.</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="terms">"By Continuing, you agree to our &#10; <a href="https://www.google.com"><b> <font fgcolor="#2D82B5">Terms of Service and Privacy Policy</font> </b></a>"</string>
    <string name="version"> v.1.0 </string>

    //SignUp Page
    <string name="signup01_email_prompt">Enter your email to sign into your account. If you dont have one, we will create one for you.</string>
    <string name="signup_create_password_description">Let\'s create a password for</string>
    <string name="signup_create_password_title">CREATE PASSWORD</string>
    <string name="signup_verify_email_description">Enter the code sent to</string>
    <string name="signup_verify_email_title">VERIFY EMAIL</string>
    <string name="resend_otp">Not received yet? <a href="https://www.google.com"><b> <font fgcolor="#2D82B5">Resend</font> </b></a></string>
    <string name="signup_profile_details_title">PROFILE DETAILS</string>
    <string name="signup_profile_details_description">What\'s your name?</string>
    <string name="signup_profile_details_add_avatar_description">Upload your avatar</string>

    //Login Credentials Page
    <string name="login_title">WELCOME BACK</string>
    <string name="login_description">Enter password to log into</string>
    <string name="login_forgot_password"><a href="https://www.google.com"><b> <font fgcolor="#2D82B5">Forgot Password</font></b></a></string>

    //Forgot Password Page
    <string name="forgot_pass_title">NEW PASSWORD</string>
    <string name="forgot_pass_description">Type in the new password for</string>
    <string name="forgot_pass_button">Confirm New Password</string>
    <string name="forgot_pass_reset">RESET PASSWORD</string>
    <string name="forgot_pass_reset_description">Enter the code sent to</string>
    <string name="HelperText">Required</string>
    <string name="email">Email</string>

    //Settings
    <string name="setting_heading">PROFILE</string>
    <string name="setting_name">Fname Lname</string>
    <string name="setting_personal_information">Personal Information</string>
    <string name="setting_account_setting">Account Settings</string>
    <string name="setting_about">About</string>


</resources>