<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:background="@color/white"
    tools:context=".Settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="2"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/tvTitleHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:letterSpacing=".15"
                android:text="@string/setting_heading"
                android:textColor="@color/gray"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="50dp">

            <androidx.cardview.widget.CardView
                android:layout_width="220dp"
                android:layout_height="220dp"
                android:background="@color/black"
                app:cardCornerRadius="250dp"
                app:cardBackgroundColor="@color/black">

                <androidx.cardview.widget.CardView
                    android:layout_width="212dp"
                    android:layout_height="212dp"
                    app:cardCornerRadius="250dp"
                    android:layout_gravity="center">

                    <ImageView
                        android:id="@+id/img_Avatar"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:scaleType="centerInside"
                        android:layout_gravity="center"
                        android:src="@drawable/aws_logo"/>

                </androidx.cardview.widget.CardView>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/tvTitleName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:letterSpacing=".15"
                android:text="@string/setting_name"
                android:textColor="@color/gray"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_gravity="center"
            android:layout_marginTop="50dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iconPersonalInformation"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/editing"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:padding="5dp"
                android:tint="@color/blue_primary"/>

            <TextView
                android:id="@+id/txtPersonalInformation"
                android:layout_width="230dp"
                android:layout_height="match_parent"
                android:letterSpacing=".15"
                android:text="@string/setting_personal_information"
                android:textColor="@color/gray"
                android:textSize="17sp"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/btnPersonalInformation"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_rightarrow"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_gravity="center"
            android:layout_marginTop="5dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iconAccountSetting"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/setting"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:padding="5dp"
                android:tint="@color/blue_primary"/>

            <TextView
                android:id="@+id/txtAccountSetting"
                android:layout_width="230dp"
                android:layout_height="match_parent"
                android:letterSpacing=".15"
                android:text="@string/setting_account_setting"
                android:textColor="@color/gray"
                android:textSize="17sp"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/btnAccountSetting"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_rightarrow"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_gravity="center"
            android:layout_marginTop="5dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iconAbout"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/about"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:padding="5dp"
                android:tint="@color/blue_primary"/>

            <TextView
                android:id="@+id/txtAbout"
                android:layout_width="230dp"
                android:layout_height="match_parent"
                android:letterSpacing=".15"
                android:text="@string/setting_about"
                android:textColor="@color/gray"
                android:textSize="17sp"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/btnAbout"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_rightarrow"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"/>

        </LinearLayout>



    </LinearLayout>



</FrameLayout>