<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="#fbfbfb"
    android:padding="10dp"
    tools:context=".EmailOTP">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="86dp"
        android:layout_height="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025"
        app:srcCompat="@drawable/aws_logo" />

    <TextView
        android:id="@+id/tvTitleHeadingDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_verify_email_description"
        android:textAlignment="viewStart"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.265" />

    <TextView
        android:id="@+id/tvTitleHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:letterSpacing=".15"
        android:text="@string/signup_verify_email_title"
        android:textAlignment="viewStart"
        android:textColor="@color/gray"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19999999" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="xxxx@email.com"
        android:textAlignment="viewStart"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />


    <TextView
        android:id="@+id/tvResend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resend_otp"
        android:textAlignment="center"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.562" />

    <LinearLayout
        android:id="@+id/llOTP"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.412">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilOTP0"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense"
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:layout_marginVertical="10dp"
            android:layout_weight="1"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.38">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiOPP0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:textAlignment="center"
                android:maxLength="1"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilOTP1"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense"
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:layout_marginVertical="10dp"
            android:layout_weight="1"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.38">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiOPP1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:textAlignment="center"
                android:maxLength="1"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilOTP2"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense"
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:layout_marginVertical="10dp"
            android:layout_weight="1"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.38">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiOPP2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:textAlignment="center"
                android:maxLength="1"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilOTP3"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense"
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:layout_marginVertical="10dp"
            android:layout_weight="1"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.38">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiOPP3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:textAlignment="center"
                android:maxLength="1"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilOTP4"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense"
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:layout_marginVertical="10dp"
            android:layout_weight="1"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.38">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiOPP4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:textAlignment="center"
                android:maxLength="1"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilOTP5"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense"
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:layout_marginVertical="10dp"
            android:layout_weight="1"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.38">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiOPP5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:textAlignment="center"
                android:maxLength="1"
                />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnProceed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="Continue"
        app:backgroundTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>